
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int * _isinstruction; int * _templates; int * _string; } ;
struct TYPE_4__ {TYPE_1__ x; } ;


 TYPE_2__* IR ;
 int assert (int) ;
 int fprint (int ,char*,...) ;
 int stderr ;

__attribute__((used)) static void dumprule(int rulenum) {
 assert(rulenum);
 fprint(stderr, "%s / %s", IR->x._string[rulenum],
  IR->x._templates[rulenum]);
 if (!IR->x._isinstruction[rulenum])
  fprint(stderr, "\n");
}
